# oasis

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  QUICKSTART_COMMANDS.md  README.md  RUN_COMMANDS.txt  Simulation overview.md  deploy.py  package-lock.json  package.json  posts.jsonl  posts_small.html  posts_small.jsonl  pyproject.toml  test_marpit_pipeline.py
.container/: Dockerfile  README.md
configs/: mvp_gemini.yaml  mvp_master.yaml
data/: edges_100.csv  edges_10k_A.csv  edges_10k_B.csv  edges_10k_C.csv  edges_10k_D.csv  edges_10k_E.csv  edges_10k_F.csv  edges_mvp.csv  edges_mvp_10k_tc.csv  edges_mvp_10k_tc_assort.csv  edges_mvp_10k_tuned.csv  flagged_messages_rows.csv  label_tokens_static_bank.yaml  manifest_mvp.yaml  personas_100.csv  personas_generated_full.csv  personas_mvp.csv  personas_primary.csv
docs/: docs.json  introduction.mdx  overview.mdx  quickstart.mdx
examples/: gather_is_simulation.py  multimodel_example.py  preference_agent_demo.py  reddit_simulation_minimax.py  scale_free.py  tiktok_simulation.py  twitter_long_memory.py  twitter_misinfo_oai.py  twitter_misinfo_vllm.py  twitter_misinfo_vllm_config.py  twitter_quick_start.py  visualize_simulation.py
generation/: emission_policy.py  extended_agent.py  labeler.py
oasis/: __init__.py  minimax.py
open_models_testing/: ANALYSIS.txt  BETTER_PROMPTS.md  PROMPT_GUIDE.md  RUN_GPT4CHAN_COMMANDS.md  __init__.py  chat_cli.py  check_model_memory.py  convert_dataset_for_t5.py  core.py  download_and_convert_gpt4chan_gptj.py  download_models.py  loaders.py  models.impute.accessible.json  models.impute.sample.json  models.sample.json  run_completions.py  run_fill_mask.py  run_gpt4chan_all_datasets.sh  run_impute.py  smoke_test.py  test_all_models.py  (+3 more)
(+421 files in other folders)
