[project]
name = "camel-oasis"
version = "0.2.3"
description = "Open Agents Social Interaction Simulations on a Large Scale"
authors = [
    {name = "CAMEL-AI.org"}
]
readme = "README.md"
license = {text = "Apache License 2.0"}
keywords = [
    "recommendation-system",
    "communicative-ai",
    "ai-societies",
    "social-simulations",
    "artificial-intelligence",
    "deep-learning",
    "multi-agent-systems",
    "natural-language-processing",
    "large-language-models",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10.0,<3.12"
dependencies = [
    "pandas==2.2.2",
    "igraph==0.11.6",
    "cairocffi==1.7.1",
    "pillow==10.3.0",
    "unstructured==0.13.7",
    "sentence-transformers==3.0.0",
    "prance==23.6.21.0",
    "openapi-spec-validator==0.7.1",
    "slack_sdk==3.31.0",
    "neo4j==5.23.0",
    "camel-ai==0.2.70",
    "requests_oauthlib==2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pre-commit==3.7.1",
]

[project.urls]
Repository = "https://github.com/camel-ai/oasis.git"
Homepage = "https://github.com/camel-ai/oasis.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oasis"]
